crates/lobo-cli/tests/snapshots/tui_parity__status_down.snap
---
source: crates/lobo-cli/tests/tui_parity.rs
expression: text
---
lobo status  ·  12:00:00

lobo: down (no lobo instance on any provider)
