crates/lobo-cli/tests/snapshots/tui_parity__status_downloading.snap
---
source: crates/lobo-cli/tests/tui_parity.rs
expression: text
---
lobo status  ·  12:00:00

Pod
id            3ab00vd3rf1575  runpod · RUNNING
cost          $0.69/h  ·  up 1h30m  ·  spent $1.03

Release
version       2026.09.23-1  ·  git feaaaa5
image         ghcr.io/ggml-org/llama.cpp:server-cuda-b11118

Agent
stage         ● download  q8 · ctx 8192
download      ██████████░░░░░░░░░░░░░░  43.2%  12.4 GB / 28.6 GB  51 MB/s

GPU
gpu           n/a

Host
host          n/a

LLM  (totals since llama-server start)
llama         n/a

Watchdog
auto-kill     in 11h56m (expired)
expires       00:00 Thu
