crates/lobo-cli/tests/snapshots/tui_parity__status_local.snap
---
source: crates/lobo-cli/tests/tui_parity.rs
expression: text
---
lobo status  ·  12:00:00

Pod
id            74585  local · RUNNING
cost          free  ·  up 1h30m

Release
version       2026.09.23-1  ·  git feaaaa5

Agent
stage         ● ready  q8 · ctx 8192

Mac
device        Apple M1 Max
memory        ███████████████░░░░░░░░░ 41,230 / 65,536 MB

LLM  (totals since llama-server start)
requests      1 running · 0 queued
tokens in     182,340  ·  2410 tok/s prompt
tokens out    21,044  ·  48.3 tok/s gen

Watchdog
idle          5m12s
auto-kill     in 24m48s (idle)
