crates/lobo-cli/tests/snapshots/tui_parity__up_failed.snap
---
source: crates/lobo-cli/tests/tui_parity.rs
expression: text
---
lobo up  ·  Qwen3.5-27B on a rented RTX 5090

 ✓ rent pod        7s     runpod pod1, COMMUNITY, host ≥10000 Mbps, $0.69/h, q8 ctx 65536
 ✓ boot container  7s     agent unreachable (other); ready unconfirmed
 ✗ tunnel          
 · gpu check       
 · download model  
 · sha256 verify   
 · load model      
 · ready           

╭────────────────────────────────────────────────────────────╮
│ ✗ up failed                                                │
│ pod stopped: download: sha256 mismatch (it deletes itself) │
│ last log line                                              │
╰────────────────────────────────────────────────────────────╯
